[package]
name = "weblings-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Storage", "Location"] }
console_error_panic_hook = "0.1"
# Pure-Rust editor: egui rendered to a canvas via eframe (glow/WebGL2 backend).
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.35"
egui_code_editor = "0.3"
# Rustlings trainer: parse the bundled exercises.json.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Two front ends share this crate (auto-discovered bins):
#   src/main.rs      -> bin "weblings-ui" (the Run-and-execute playground)
#   src/bin/trainer.rs -> bin "trainer"     (the compile-check Rustlings trainer)
# index.html and trainer.html select their bin via `data-bin`.

[profile.release]
opt-level = "s"

